docs(post-p1): bilingual user guide and language-aware in-app help
POST-P1-DOC-HELP is a documentation, frontend/help and packaged-resource
track. It changes no kernel, geometry, DAG, serialization, semantic identity,
metric, intersection, DXF algorithm, packaging policy or version.

Add the two official user guides for GeoCeDG 1.0.0 as semantic-parity
editions with the same 17 stable section identifiers, the same commands and
the same worked examples, all validated against existing desktop tests:

  docs/user/geocedg_user_guide_en.md
  docs/user/geocedg_user_guide_es.md

Make Help -> GeoCeDG user guide select the edition of the active product
language (es -> _es, en -> _en, anything else -> en) through the existing
seam, and read it in the existing read-only viewer sized for a document.
No second help system, no Markdown dependency, no external browser.

Package exactly the two tracked sources as byte copies and stop packaging
the former guides. Reduce docs/user/geocedg_user_guide.md to an index and
mark the construction quick guide superseded, so there is no third,
divergent user manual. Relocate the workstation, build, packaging and
reference material unchanged to docs/developer/geocedg_operations_manual.md.

Add PostP1BilingualUserGuideTest covering existence, packaging byte
identity, per-language selection, the documented English fallback, section-ID
parity, shared commands and limitations, absence of known stale wording, the
removed quick-guide dependency, and the unchanged Classic and persistence
declarations. Retarget the guide assertions of PreG9BP1PublicSurfaceTest,
G9U1WorkspaceSurfaceTest and G9U1IconReviewTest at the relocated documents
with their contracts preserved.

Re-pin the canonical hash of the changed desktop build file and the
static-contract catalog identity, and point the documentation diagnostic at
the relocated operations manual.

STATIC and INFRA_UNIT are ACCEPTED / COMPLETE; focused desktop tests and
checkstyle pass; git diff --check is c